[package]
authors = ["Eric Rolfe <eric@rolfe.dev>"]
categories = ["mathematics"]
description = "Provides a prime number iterator and methods for basic calculations with prime numbers."
edition = "2018"
keywords = ["prime"]
license = "MIT OR Apache-2.0"
name = "elr_primes"
readme = "README.md"
repository = "https://github.com/elrolfe/elr_primes.git"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
